# book-DDD

./: .gitignore  Makefile  conftest.py  docker-compose.yml  flask_app.py  model.py  mypy.ini  orm.py  pyproject.toml  repository.py  services.py  test_allocate.py  test_api.py  test_model.py  test_orm.py  test_repository.py  test_services.py
adapters/: orm.py  repository.py
entrypoints/: flask_app.py
service_layer/: services.py  unit_of_work.py
tests/: conftest.py
tests/e2e/: test_api.py
tests/integration/: test_orm.py  test_repository.py  test_uow.py
tests/unit/: test_allocate.py  test_model.py  test_services.py
